fixed layout issues

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,7 +3,9 @@ $secondaryColor: #006ce5;
 $thirdColor: #202020; 
 $mainWhite: white;
 
-/*--------- Global CSS ----------*/
+/* global.css */
+
+
 
 * {
   box-sizing: border-box;
@@ -15,6 +17,7 @@ body {
   line-height: 1.4283;
   font-family:  "Helvetica Neue", "Segoe UI", Roboto, sans-serif;
 }
+
 p {
   font-size:18px;
   color: #111111;
@@ -25,6 +28,11 @@ h3 {
   font-weight: 400;
   color: $thirdColor;
 } 
+// a {
+//   text-decoration: none;
+//   color: #006ce5;
+//   border-bottom: 2px solid #006ce5;
+// }
 a > h2 {
   color: #006ce5;
   text-decoration: none;
@@ -53,5 +61,8 @@ a:active {
   margin-bottom: -7px;
 }
 .link1 {
+  margin-left: 0px !important;
+}
+.github1 {
   margin-left: 0px !important;
 }
